-mUser, Idea, Dap tables upgraded, with login still working

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>ColorCodedTees</title>
+    <script src="https://kit.fontawesome.com/e145510635.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div id="root"></div>
