--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>ColorCodedTees</title>
     <script src="https://kit.fontawesome.com/e145510635.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
   </head>
   <body>
     <div id="root"></div>
